# daeExtractor

./: .gitignore  Cargo.toml  README.md  gulpfile.js  index.html  index.tpl  package.json  tsconfig.json  webpack.config.js
src/: animation.tsx  entry.tsx  main.rs  main.tsx  mesh.tsx  module.tsx  object.tsx  store.tsx  texture.tsx
src/ClientApp/: Container.tsx  animation.tsx  buttonWrap.tsx  main.tsx  mesh.tsx  object.tsx  texture.tsx
static/css/: main.css
static/js/: itemtable.js  table.js
stylus/: main.styl
template/: file.db  index.html  index.tpl  mesh.tpl  object.tpl  texture.tpl
