[package]
name = "ceditor"
version = "0.1.0"
authors = ["ggkuron"]

[dependencies]
collada = "0.3.0"
rusqlite = "0.7.3"
png = "0.5"
iron = "0.5.1"
router = "0.5.1"
serde = "1.0.1"
serde_json = "1.0.1"
serde_derive = "1.0.10"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"
